docs: Mute video
Signed-off-by: Philippe Coval <rzr@users.sf.net>
Change-Id: Iabe5d129af83794255c9d9c1fe2dcd705b48cd79

--- a/docs/immersive-twins/index.org
+++ b/docs/immersive-twins/index.org
@@ -238,7 +238,7 @@ Extra:
 [[https://www.youtube.com/watch?v=pGZbHdiTalQ&list=UUgGWtPbelycq8xjbaI1alZg&index=1#web-of-twins-fosdem-2020-rzr#][📺]]
 
 * Video playback
-  @@html:<video controls src="https://conf.tube/download/videos/fcbd94ee-eecd-458c-b33b-dcb0232adf21-1080.mp4"></video>@@
+  @@html:<video controls src="https://conf.tube/download/videos/fcbd94ee-eecd-458c-b33b-dcb0232adf21-1080.mp4" muted></video>@@
 * More
   - https://purl.org/rzr/
   - https://purl.org/rzr/presentations
