--- a/docs/index.org
+++ b/docs/index.org
@@ -10,6 +10,10 @@
 
 * RzR's Presentations
 
+  - [[./pincab][Pincab]]
+    [[./pincab/index.html?print-pdf][@]]
+    [[https://libregraphicsmeeting.org/2021/en/program.html][#LGM2021]]
+    [[https://pleroma.debian.social/notice/A6ngRnmxQfcQzaSu3c][2021]]
   - [[./webthings][WebThings: IoT + Privacy]]
     [[./webthings/index.html?print-pdf][@]]
     [[https://liveembedded.virtualconference.com/#/conference/5fb2716a04fdfb001b5d9f42][#LEE]]
@@ -30,6 +34,7 @@
     [[./sensors-webthings/index.html?print-pdf][@]]
     [[https://sfk.flossk.org/?schedule=sensing-reality-with-wot-on-microcontrollers#][#SFK20]]
     [[https://mastodon.cloud/@FLOSSK/104909087113385520#SFK20#][2020]]
+* RzR @ 2020...
   - [[./nuttx-js-robot/][JavaScript Robot on NuttX]]
     [[./nuttx-js-robot/index.html?print-pdf][@]]
     [[https://nuttx.events/][#NuttX]]
